--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <a href="index.html">
 
           <img   src="https://static.wixstatic.com/media/a6218d_85cedc866c2043fa8814ecee661eef12~mv2.png/v1/crop/x_406,y_872,w_2806,h_737/fill/w_474,h_106,fp_0.50_0.50,q_85,usm_0.66_1.00_0.01,enc_auto/a6218d_85cedc866c2043fa8814ecee661eef12~mv2.png"
-            alt="Girl in a jacket" alt="forest taste picture" width="30%">
+            alt="Youi_logo" width="30%">
             
           </a>
         </div>
