--- a/about.html
+++ b/about.html
@@ -18,6 +18,12 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   <!--font_end-->
+
+
+
+  
+
+
 </head>
 
 
@@ -34,7 +40,7 @@
           <a href="index.html">
 
           <img   src="https://static.wixstatic.com/media/a6218d_85cedc866c2043fa8814ecee661eef12~mv2.png/v1/crop/x_406,y_872,w_2806,h_737/fill/w_474,h_106,fp_0.50_0.50,q_85,usm_0.66_1.00_0.01,enc_auto/a6218d_85cedc866c2043fa8814ecee661eef12~mv2.png"
-            alt="Girl in a jacket" alt="forest taste picture" width="30%">
+            alt="Youi_logo" width="30%">
             
           </a>
         </div>
@@ -71,7 +77,7 @@
 
 
 
-    <div class="page06cards">
+      <div class="page06cards">
 
       <div class="page06container">
 
@@ -91,7 +97,7 @@
           </div>
 
           <div class="page06cardinner2">
-            
+
             <svg xmlns="http://www.w3.org/2000/svg" height="40px" viewBox="0 -960 960 960" width="40px" fill="#2854C5"><path d="M446.67-163.67V-461l-260-150.33V-314l260 150.33Zm66.66 0 260-150.33v-298l-260 150.89v297.44ZM480-518l256.33-149L480-815.33 223-667l257 149ZM153.33-256q-15.83-9.28-24.58-24.48-8.75-15.19-8.75-33.19v-332.66q0-18 8.75-33.19 8.75-15.2 24.58-24.48l293.34-169q15.88-9 33.44-9 17.56 0 33.22 9l293.34 169q15.83 9.28 24.58 24.48 8.75 15.19 8.75 33.19v332.66q0 18-8.75 33.19-8.75 15.2-24.58 24.48L513.33-87q-15.88 9-33.44 9-17.56 0-33.22-9L153.33-256ZM480-480Z"/></svg>
             <a href="https://kelly7y178.editorx.io/kellywshowreel">
             <h4>3D Modelling / Animation / Rendering</h4></a>
@@ -111,7 +117,12 @@
   </section>
 
 
-  
+  <!--
+  This script places a badge on your repl's full-browser view back to your repl's cover
+  page. Try various colors for the theme: dark, light, red, orange, yellow, lime, green,
+  teal, blue, blurple, magenta, pink!
+  -->
+  <script src="https://replit.com/public/js/replit-badge-v2.js" theme="dark" position="bottom-right"></script>
 
   <script src="script.js"></script>
 </body>
