--- a/projects.html
+++ b/projects.html
@@ -18,6 +18,12 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   <!--font_end-->
+
+
+
+
+
+
 </head>
 
 
@@ -34,7 +40,7 @@
           <a href="index.html">
 
           <img   src="https://static.wixstatic.com/media/a6218d_85cedc866c2043fa8814ecee661eef12~mv2.png/v1/crop/x_406,y_872,w_2806,h_737/fill/w_474,h_106,fp_0.50_0.50,q_85,usm_0.66_1.00_0.01,enc_auto/a6218d_85cedc866c2043fa8814ecee661eef12~mv2.png"
-            alt="Girl in a jacket" alt="forest taste picture" width="30%">
+            alt="Youi_logo" width="30%">
 
           </a>
         </div>
@@ -59,175 +65,258 @@
 
     <!--page04-->
 
-      <div class="page04">
-        <h3>Projects</h3>
-        <hr>
+  <div class="page04">
+    <h3>Projects</h3>
+    <hr>
 
-        <h4>Displayed here is just a glimpse of the projects. To explore more, simply click on the boxes above for further inquiries.</h4>
+    <p>Displayed here is just a glimpse of the projects. <br>
+      To explore more,<br> simply click on the boxes above for further inquiries.</p>
 
-       
-
-        <div class="page04container">
-
-          <!--page04 -card01-->
-          <div class="page04card" style="--clr: #009688">
-            <div class="page04img-box">
-              <img
-    src="https://static.wixstatic.com/media/a6218d_e4ec5a6b34d04b84b801f16af9f3b8c7~mv2.png/v1/fill/w_1304,h_846,fp_0.48_0.50,q_90,usm_0.66_1.00_0.01,enc_auto/Desktop%20-%204%20(1).png">
-            </div>
-            <div class="page04content">
-              <h2>UrgentTrack</h2>
-              <p>
-                (Website Design & Programming)
-              </p>
-              <a href="https://kelly7y178.editorx.io/youi/blank-5">Read More</a>
-            </div>
-          </div>
-
-
-          <!--page04 -card02-->
-          <div class="page04card" style="--clr: #03A9F4">
-            <div class="page04img-box">
-              <img   src="https://static.wixstatic.com/media/a6218d_7e435fab5dda474e8b2b56a2d2345fbb~mv2.png/v1/fill/w_1320,h_1620,fp_0.46_0.50,q_95,usm_0.66_1.00_0.01,enc_auto/Neopet_rabbit_v01.png">
-            </div>
-            <div class="page04content">
-              <h2>Neopets Game</h2>
-              <p>
-                (3D Modelling & Shading)
-              </p>
-              <a href="">Read More</a>
-            </div>
-          </div>
-
-
-          <!--page04 -card03-->
-          <div class="page04card" style="--clr: #FF3E7F">
-            <div class="page04img-box">
-              <img src="https://static.wixstatic.com/media/a6218d_f79fbcf3825447e1a1aa7d96134d8a43~mv2.png/v1/fill/w_1304,h_846,fp_0.46_0.50,q_90,usm_0.66_1.00_0.01,enc_auto/Desktop%20-%201%20(2).png">
-            </div>
-            <div class="page04content">
-              <h2>New Lantao Bus Chrome Extensions</h2>
-              <p>
-                (Extensions Design & Programming)
-              </p>
-              <a href="https://kelly7y178.editorx.io/youi/blank-4-1">Read More</a>
-            </div>
-          </div>
-
-
-          <!--page04 -card04-->
-          <div class="page04card" style="--clr: #03A9F4">
-            <div class="page04img-box">
-              <img   src="https://static.wixstatic.com/media/a6218d_dfc2b072a8c34b3bb9ee96c6653ac3d3~mv2.png/v1/crop/x_330,y_96,w_1415,h_835/fill/w_572,h_338,fp_0.50_0.50,q_85,usm_0.66_1.00_0.01,enc_auto/Untitled-1-Recovered.png">
-            </div>
-            <div class="page04content">
-              <h2>Hong Kong Design Institute - music book design</h2>
-              <p>
-                (Book Design)
-              </p>
-              <a href="https://kelly7y178.editorx.io/youi">Read More</a>
-            </div>
-          </div>
-
-           <!--page04 -card05-->
-          <div class="page04card" style="--clr: #009688">
-            <div class="page04img-box">
-              <img   src="https://static.wixstatic.com/media/a6218d_30c32817d4ce42e6a512dcfaf1637657~mv2.png/v1/fill/w_733,h_476,fp_0.50_0.55,q_85,enc_auto/Rectangle-2226-1%20(2).png">
-            </div>
-            <div class="page04content">
-              <h2>HealthMatriX MatriX-iPass Software</h2>
-              <p>
-                (Website and App Design)
-              </p>
-              <a href="https://kelly7y178.editorx.io/youi/blank-4">Read More</a>
-            </div>
-          </div>
-
-
-          <!--page04 -card06-->
-          <div class="page04card" style="--clr: #03A9F4">
-            <div class="page04img-box">
-              <img   src="https://static.wixstatic.com/media/a6218d_4dd999bf7fd94d239258ab172eb77705~mv2.png/v1/fill/w_1210,h_600,al_c,q_90,usm_0.66_1.00_0.01,enc_auto/Screenshot%202024-04-24%20at%201_40_02%E2%80%AFAM.png">
-            </div>
-            <div class="page04content">
-              <h2>Play With An Open Heart Animation Video</h2>
-              <p>
-                (3D Modelling & Shading)
-              </p>
-              <a href="https://youtu.be/Un_EQw7Q1cQ">Read More</a>
-            </div>
-          </div>
-
-          <!--page04 -card07-->
-          <div class="page04card" style="--clr: #009688">
-            <div class="page04img-box">
-              <img   src="https://static.wixstatic.com/media/a6218d_bcb3bc9bba314fd99bc2ca679ed0a8ba~mv2.png/v1/fill/w_1304,h_846,al_c,q_90,usm_0.66_1.00_0.01,enc_auto/Untitled%20design%20(2)-1.png">
-            </div>
-            <div class="page04content">
-              <h2>0Plus App</h2>
-              <p>
-                (App & poster Design)
-              </p>
-              <a href="https://kelly7y178.editorx.io/youi/blank">Read More</a>
-            </div>
-          </div>
-
-          <!--page04 -card08-->
-          <div class="page04card" style="--clr: #03A9F4">
-            <div class="page04img-box">
-              <img   src="https://static.wixstatic.com/media/a6218d_2caf54f9e40442aba163b589c66ace95~mv2.png/v1/fill/w_640,h_484,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/fish_burger_model_mix_v01_edited.png">
-            </div>
-            <div class="page04content">
-              <h2>Solitiar Game</h2>
-              <p>
-                (3D Modelling & Shading)
-              </p>
-              <a href="https://youtu.be/KEdLI5E1VHc">Read More</a>
-            </div>
-          </div>
-
-
-          <!--page04 -card09-->
-          <div class="page04card" style="--clr: #FF3E7F">
-            <div class="page04img-box">
-              <img   src="https://static.wixstatic.com/media/a6218d_430b2a6667a242c582c911758bc50fa0~mv2.png/v1/fill/w_1304,h_846,fp_0.50_0.50,q_90,usm_0.66_1.00_0.01,enc_auto/Untitled%20design%20(3)-1.png">
-            </div>
-            <div class="page04content">
-              <h2>Pakkit Website</h2>
-              <p>
-                (Website Design)
-              </p>
-              <a href="https://kelly7y178.editorx.io/youi/blank-1">Read More</a>
-            </div>
-          </div>
-
-          <!--page04 -card10-->
-          <div class="page04card" style="--clr: #009688">
-            <div class="page04img-box">
-              <img   src="https://static.wixstatic.com/media/a6218d_2f4aa994d981484f84b692fc14a81dc4~mv2.png/v1/fill/w_1304,h_846,al_c,q_90,usm_0.66_1.00_0.01,enc_auto/pakkit-1.png">
-            </div>
-            <div class="page04content">
-              <h2>Spotify App</h2>
-              <p>
-                (App Design)
-              </p>
-              <a href="https://kelly7y178.editorx.io/youi/blank-3">Read More</a>
-            </div>
-          </div>
+    <!--<div class="page04Btn">
+      <span>Explore More</span>
+    </div>-->
 
 
 
+    <div class="page04container">
+
+      <!--page04 -card01-->
+      <div class="page04card" style="--clr: #009688">
+        <div class="page04img-box">
+          <img
+  src="https://static.wixstatic.com/media/a6218d_e4ec5a6b34d04b84b801f16af9f3b8c7~mv2.png/v1/fill/w_1304,h_846,fp_0.48_0.50,q_90,usm_0.66_1.00_0.01,enc_auto/Desktop%20-%204%20(1).png">
+        </div>
+        <div class="page04content">
+          <h2>UrgentTrack</h2>
+          <p>
+            (Website Design & Programming)
+          </p>
+          <a href="https://kelly7y178.editorx.io/youi/urgenttrack-website">Read More</a>
+        </div>
+      </div>
 
 
-          
+      <!--page04 -card02-->
+      <div class="page04card" style="--clr: #03A9F4">
+        <div class="page04img-box">
+          <img   src="https://static.wixstatic.com/media/a6218d_7e435fab5dda474e8b2b56a2d2345fbb~mv2.png/v1/fill/w_1320,h_1620,fp_0.46_0.50,q_95,usm_0.66_1.00_0.01,enc_auto/Neopet_rabbit_v01.png">
+        </div>
+        <div class="page04content">
+          <h2>Neopets Game</h2>
+          <p>
+            (3D Modelling & Shading)
+          </p>
+          <a href="https://kelly7y178.editorx.io/youi/neopets-mata">Read More</a>
+        </div>
+      </div>
 
 
+      <!--page04 -card03-->
+      <div class="page04card" style="--clr: #FF3E7F">
+        <div class="page04img-box">
+          <img src="https://static.wixstatic.com/media/a6218d_f79fbcf3825447e1a1aa7d96134d8a43~mv2.png/v1/fill/w_1304,h_846,fp_0.46_0.50,q_90,usm_0.66_1.00_0.01,enc_auto/Desktop%20-%201%20(2).png">
+        </div>
+        <div class="page04content">
+          <h2>New Lantao Bus Chrome Extensions</h2>
+          <p>
+            (Extensions Design & Programming)
+          </p>
+          <a href="https://kelly7y178.editorx.io/youi/new-lantao-bus-chrome-extensions">Read More</a>
+        </div>
+      </div>
+
+
+      <!--page04 -card04-->
+      <div class="page04card" style="--clr: #03A9F4">
+        <div class="page04img-box">
+          <img   src="https://static.wixstatic.com/media/a6218d_dfc2b072a8c34b3bb9ee96c6653ac3d3~mv2.png/v1/crop/x_330,y_96,w_1415,h_835/fill/w_572,h_338,fp_0.50_0.50,q_85,usm_0.66_1.00_0.01,enc_auto/Untitled-1-Recovered.png">
+        </div>
+        <div class="page04content">
+          <h2>Hong Kong Design Institute - music book design</h2>
+          <p>
+            (Book Design)
+          </p>
+          <a href="https://kelly7y178.editorx.io/youi/music-book">Read More</a>
+        </div>
+      </div>
+
+       <!--page04 -card05-->
+      <div class="page04card" style="--clr: #009688">
+        <div class="page04img-box">
+          <img   src="https://static.wixstatic.com/media/a6218d_30c32817d4ce42e6a512dcfaf1637657~mv2.png/v1/fill/w_733,h_476,fp_0.50_0.55,q_85,enc_auto/Rectangle-2226-1%20(2).png">
+        </div>
+        <div class="page04content">
+          <h2>HealthMatriX MatriX-iPass Software</h2>
+          <p>
+            (Website and App Design)
+          </p>
+          <a href="https://kelly7y178.editorx.io/youi/healthmatrix-matrix-ipass-software">Read More</a>
+        </div>
+      </div>
+
+
+      <!--page04 -card06-->
+      <div class="page04card" style="--clr: #03A9F4">
+        <div class="page04img-box">
+          <img   src="https://static.wixstatic.com/media/a6218d_4dd999bf7fd94d239258ab172eb77705~mv2.png/v1/fill/w_1210,h_600,al_c,q_90,usm_0.66_1.00_0.01,enc_auto/Screenshot%202024-04-24%20at%201_40_02%E2%80%AFAM.png">
+        </div>
+        <div class="page04content">
+          <h2>Play With An Open Heart Animation Video</h2>
+          <p>
+            (3D Modelling & Shading)
+          </p>
+          <a href="https://kelly7y178.editorx.io/youi/animation-video">Read More</a>
+        </div>
+      </div>
+
+      <!--page04 -card07-->
+      <div class="page04card" style="--clr: #009688">
+        <div class="page04img-box">
+          <img   src="https://static.wixstatic.com/media/a6218d_bcb3bc9bba314fd99bc2ca679ed0a8ba~mv2.png/v1/fill/w_1304,h_846,al_c,q_90,usm_0.66_1.00_0.01,enc_auto/Untitled%20design%20(2)-1.png">
+        </div>
+        <div class="page04content">
+          <h2>0Plus App</h2>
+          <p>
+            (App & poster Design)
+          </p>
+          <a href="https://kelly7y178.editorx.io/youi/0-plus">Read More</a>
+        </div>
+      </div>
+
+      <!--page04 -card08-->
+      <div class="page04card" style="--clr: #03A9F4">
+        <div class="page04img-box">
+          <img   src="https://static.wixstatic.com/media/a6218d_2caf54f9e40442aba163b589c66ace95~mv2.png/v1/fill/w_640,h_484,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/fish_burger_model_mix_v01_edited.png">
+        </div>
+        <div class="page04content">
+          <h2>Solitiare Game</h2>
+          <p>
+            (3D Modelling & Shading)
+          </p>
+          <a href="https://kelly7y178.editorx.io/youi/solitaire">Read More</a>
+        </div>
+      </div>
+
+
+      <!--page04 -card09-->
+      <div class="page04card" style="--clr: #FF3E7F">
+        <div class="page04img-box">
+          <img   src="https://static.wixstatic.com/media/a6218d_430b2a6667a242c582c911758bc50fa0~mv2.png/v1/fill/w_1304,h_846,fp_0.50_0.50,q_90,usm_0.66_1.00_0.01,enc_auto/Untitled%20design%20(3)-1.png">
+        </div>
+        <div class="page04content">
+          <h2>Pakkit Website</h2>
+          <p>
+            (Website Design)
+          </p>
+          <a href="https://kelly7y178.editorx.io/youi/pakkit">Read More</a>
+        </div>
+      </div>
+
+      <!--page04 -card10-->
+      <div class="page04card" style="--clr: #009688">
+        <div class="page04img-box">
+          <img   src="https://static.wixstatic.com/media/a6218d_2f4aa994d981484f84b692fc14a81dc4~mv2.png/v1/fill/w_1304,h_846,al_c,q_90,usm_0.66_1.00_0.01,enc_auto/pakkit-1.png">
+        </div>
+        <div class="page04content">
+          <h2>Spotify App</h2>
+          <p>
+            (App Design)
+          </p>
+          <a href="https://kelly7y178.editorx.io/youi/spotify">Read More</a>
+        </div>
+      </div>
+
+
+      <!--page04 -card11-->
+      <div class="page04card" style="--clr: #03A9F4">
+        <div class="page04img-box">
+          <img   src="https://static.wixstatic.com/media/a6218d_1fcb824e11344dd1bbb2dc9db761e165~mv2.png/v1/fill/w_1920,h_939,al_c,q_90,enc_auto/Mockup.png">
+        </div>
+        <div class="page04content">
+          <h2>Gambling App</h2>
+          <p>
+            (3D Modelling & UI Design)
+          </p>
+          <a href="https://kelly7y178.editorx.io/youi/gambling-app">Read More</a>
+        </div>
+      </div>
+
+
+      <!--page04 -card12-->
+      <div class="page04card" style="--clr: #009688">
+        <div class="page04img-box">
+          <img   src="https://static.wixstatic.com/media/a6218d_922999b0a2f444e1852ab2a0dc0b62b2~mv2.png/v1/fill/w_1374,h_908,fp_0.50_0.50,q_90,usm_0.66_1.00_0.01,enc_auto/chinese%20window.png">
+        </div>
+        <div class="page04content">
+          <h2>Chinese Window Show Project</h2>
+          <p>
+            (Brand,Poster & Leaflet Design)
+          </p>
+          <a href="https://kelly7y178.editorx.io/youi/chinese-window">Read More</a>
+        </div>
+      </div>
+
+      <!--page04 -card13-->
+      <div class="page04card" style="--clr: #FF3E7F">
+        <div class="page04img-box">
+          <img   src="https://static.wixstatic.com/media/a6218d_b5de573133154bf1bdb0f9f48dedf7e0~mv2.jpg/v1/fill/w_1374,h_908,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/001_2D_Diana_Project.jpg">
+        </div>
+        <div class="page04content">
+          <h2>Diana Project</h2>
+          <p>
+            (Brand & Product Design)
+          </p>
+          <a href="https://kelly7y178.editorx.io/youi/diana">Read More</a>
+        </div>
+      </div>
+
+      <!--page04 -card14-->
+      <div class="page04card" style="--clr: #009688">
+        <div class="page04img-box">
+          <img   src="https://static.wixstatic.com/media/a6218d_4eb4f0ca0f1049f39204c95ed07ecf23~mv2.jpg/v1/fill/w_1005,h_686,al_c,q_85,enc_auto/10-5.jpg">
+        </div>
+        <div class="page04content">
+          <h2>Forest Taste Project</h2>
+          <p>
+            (Brand & Material Design)
+          </p>
+          <a href="https://kelly7y178.editorx.io/youi/forest-taste">Read More</a>
+        </div>
+      </div>
+
+
+      <!--page04 -card15-->
+      <div class="page04card" style="--clr: #03A9F4">
+        <div class="page04img-box">
+          <img src="https://static.wixstatic.com/media/a6218d_6dc6ddddc2074878925a7571402e9ff1~mv2.jpg/v1/fill/w_1920,h_1017,al_c,q_85,enc_auto/hk_house.jpg">
+        </div>
+        <div class="page04content">
+          <h2>Hong Kong House Project</h2>
+          <p>
+            (3D Modelling)
+          </p>
+          <a href="https://kelly7y178.editorx.io/youi/hong-kong-house">Read More</a>
         </div>
       </div>
 
 
 
 
+
+
+
+
+
+    </div>
+  </div>
+
+
+  <!--
+  This script places a badge on your repl's full-browser view back to your repl's cover
+  page. Try various colors for the theme: dark, light, red, orange, yellow, lime, green,
+  teal, blue, blurple, magenta, pink!
+  -->
+  <script src="https://replit.com/public/js/replit-badge-v2.js" theme="dark" position="bottom-right"></script>
 
   <script src="script.js"></script>
 </body>
