--- a/about.html
+++ b/about.html
@@ -67,10 +67,10 @@
   <!--page06-->
 
   <section class="page06">
-    <h3>Hi. I'm Kelly Wong.</h3>
+    <h3>Hi. I'm <span>Kelly Wong.</span></h3>
     <hr>
 
-    <p>As a multi-talented professional with approximately 3 years of experience in graphic design, 3D design, and web development, I provide concepts and references as a graphic designer. As a 3D designer, I transform them into tangible templates and simulated images, while utilizing these creations to enhance web design as a web developer.<br>
+    <p>As a multi-talented professional with <span>approximately 4 years of experience in graphic design, 3D design, and web development,</span> I provide concepts and references as a graphic designer. As a 3D designer, I transform them into tangible templates and simulated images, while utilizing these creations to enhance web design as a web developer.<br>
       <b><br> You can click on the boxes below, and then you will see all the projects related to the type you clicked on.</b>
     </p>
 
