--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Kelly Wong portfolio</title>
+  <title>Kelly Portfolio</title>
   <!--favicon_start-->
   <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
-  <link rel="manifest" href="/site.webmanifest">
   <!--favicon_end-->
   <link href="style.css" rel="stylesheet" />
   <!--font_start-->
