--- a/projects.html
+++ b/projects.html
@@ -4,13 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Kelly Wong portfolio</title>
+  <title>Kelly Portfolio</title>
   <!--favicon_start-->
   <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
   <!--favicon_end-->
   <link href="style.css" rel="stylesheet" />
   <!--font_start-->
