--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width">
   <title>Kelly Portfolio</title>
   <!--favicon_start-->
-  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/images/favicon-32x32.png">
   <!--favicon_end-->
   <link href="style.css" rel="stylesheet" />
   <!--font_start-->
