--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width">
   <title>Kelly Portfolio</title>
   <!--favicon_start-->
-  <link rel="icon" type="image/x-icon" href="/images/favicon-32x32.png">
+  <link rel="icon" type="image/x-icon" href="https://shoplineimg.com/5dedb6f5d9d3e3003839085e/5e37b5acbc338a00302f820c/400x.png?">
   <!--favicon_end-->
   <link href="style.css" rel="stylesheet" />
   <!--font_start-->
