--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width">
   <title>Kelly Portfolio</title>
   <!--favicon_start-->
-  <link rel="icon" type="image/x-icon" href="/images/favicon-32x32.png">
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
   <!--favicon_end-->
   <link href="style.css" rel="stylesheet" />
   <!--font_start-->
@@ -14,12 +14,6 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   <!--font_end-->
-
-
-
-  
-
-
 </head>
 
 
