--- a/index.html
+++ b/index.html
@@ -2,22 +2,18 @@
 <html>
 
 <head>
-
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Kelly Portfolio</title>
   <!--favicon_start-->
-  <link rel="icon" type="image/x-icon" href="https://shoplineimg.com/5dedb6f5d9d3e3003839085e/5e37b5acbc338a00302f820c/400x.png?">
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
   <!--favicon_end-->
   <link href="style.css" rel="stylesheet" />
   <!--font_start-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   <!--font_end-->
-
 </head>
 
 
