--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width">
   <title>Kelly Portfolio</title>
   <!--favicon_start-->
-  <link rel="icon" type="image/x-icon" href="https://static.wixstatic.com/media/a6218d_67172f297d37430eb91beeda78a0292a~mv2.png/v1/fill/w_48,h_48,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/white_youi_logo.png">
+  <link rel="icon" type="image/x-icon" href="https://static.wixstatic.com/media/a6218d_384e19438dca480d95db24a48cdde74c~mv2.png/v1/fill/w_48,h_48,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/grey_youi_logo.png">
   <!--favicon_end-->
   <link href="style.css" rel="stylesheet" />
   <!--font_start-->
